# book_finder

./: Makefile  README.md  pylintrc  pyproject.toml
backend/: Dockerfile.dev  Makefile  README.md  docker-compose.yaml  pylintrc  pyproject.toml  pytest.ini
backend/src/: manage.py
backend/src/book_finder/: settings.py  test_settings.py
backend/src/core/: admin.py  views.py
backend/src/core/fixtures/: books.csv  reviews.csv
backend/src/core/management/commands/: load_reviews.py
backend/src/core/migrations/: 0001_initial.py
backend/src/core/models/: book.py  review.py
backend/src/core/tests/: test_views.py
frontend/: package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.js  index.css
frontend/src/components/: Input.js
frontend/src/components/books/: BookForm.js  BookTable.js  Books.js
src/book_finder/: asgi.py  settings.py  urls.py  wsgi.py
src/core/: urls.py
src/core/management/commands/: _csv_command.py  load_books.py
src/core/migrations/: 0001_initial.py
src/core/models/: book.py
src/core/tests/: conftest.py  test_views.py
