[tool.poetry]
name = "book_finder"
version = "0.1.0"
description = ""
authors = ["Piotr Błaszczyk"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
pylint-django = "^2.3.0"
pytest = "^6.0.1"
pytest-django = "^3.9.0"

[tool.black]
line_length = 100
target_version = ["py38"]
exclude = "migrations/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
